voting-app-chart/templates/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
spec:
  selector:
    matchLabels:
      name: db
  replicas: 1
  template:
    metadata:
      name: db
      labels:
        name: db
    spec:
      containers:
      - name: db
        image: postgres:15-alpine
        ports:
          - containerPort: 5432
            name: db
        
        volumeMounts:
        - name: db-pv
          mountPath: /var/lib/postgresql/data
        
      volumes:
      - name: db-pv
        persistentVolumeClaim:
          claimName: db-pvc
