voting-app-chart/templates/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
spec:
  serviceName: db
  selector:
    matchLabels:
      name: db
  replicas: 1
  template:
    metadata:
      labels:
        name: db
    spec:
      containers:
      - name: db
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
          name: db
        volumeMounts:
        - name: db-pv
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: db-pv
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
