voting-app-chart/templates/worker-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-app
spec:
  selector:
    matchLabels:
      name: worker-app
  replicas: 1
  template:
    metadata:
      labels:
        name: worker-app
    spec:
      containers:
      - name: worker-app
        image: kodekloud/examplevotingapp_worker:v2
