voting-app-chart/templates/voting-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: voting-app-service
spec:

  type : NodePort
  selector:
    name: voting-app
  ports:
  - port: 80
    targetPort: voting-app
    nodePort : 31001
