voting-app-chart/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  ingressClassName: nginx
  rules:
   - http:
      paths:
      - path: /voting
        pathType: Prefix
        backend:
          service:
            name: voting-app-service
            port:
              number: 80
    
      - path: /result
        pathType: Prefix
        backend:
          service:
            name: result-app-service
            port:
              number: 80
